--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
   "type": "project",
   "require": {
     "cboden/ratchet": "^0.4.4",
-    "react/zmq": "^v0.4.0"
+    "react/zmq": "^v0.4.0",
+    "ext-pdo": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5"
